--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <div class="header__menu">
                             <a class="header__menu_text header__menu_home" href='./index.html'>Home</a>
                             <a class="header__menu_text" href='#'>О нас</a>
-                            <a class="header__menu_text" href='#'>Проекты</a>
+                            <a class="header__menu_text" href='./index2.html'>Проекты</a>
                             <a class="header__menu_text" href='#'>Цены</a>
                             <a class="header__menu_text" href='#'>Связаться</a>
                         </div>
@@ -26,9 +26,9 @@
                             <li>    
                                 <img class="header__image_burger" src="./image/,burger.svg"alt="лого">
                                 <ul class='header__menu_burgers header__menu_burger_block'>
-                                     <li><a class="header__menu_text" href='./index2.html'>Home</a></li>
+                                     <li><a class="header__menu_text" href='#'>Home</a></li>
                                       <li><a class="header__menu_text" href='#'>О нас</a></li>
-                                    <li><a class="header__menu_text" href='#'>Проекты</a></li>
+                                    <li><a class="header__menu_text" href='/index2.html'>Проекты</a></li>
                                        <li><a class="header__menu_text" href='#'>Цены</a></li>
                                       <li><a class="header__menu_text" href='#'>Связаться</a></li>
                                 </ul>
@@ -64,9 +64,11 @@
                         проекты</h2>
                     <div class="project__container project__container_even project__container__example_one">
                         <div class="project__container_text">
-                            <p class="project__container_year">2020</p>
-                            <h3 class="project__container_title">ЖК Кутузовский Life</h3>
-                            <p class="project__container_subtitle">Квартира в стиле минимализм для семьи с ребенком</p>
+                            <div class="project__container_text_title">
+                                <p class="project__container_year">2020</p>
+                                <h3 class="project__container_title">ЖК Кутузовский Life</h3>
+                            </div>
+                                <p class="project__container_subtitle">Квартира в стиле минимализм для семьи с ребенком</p>
                             <div class="project__container_group2">
                             <a href="#" class="project__container_link">узнать больше <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                             <p class="project__container_metre">100 м2</p>
@@ -77,9 +79,11 @@
                     <div class="project__container project__container_odd project__container__example_two">
                         <img src="./image/twoexample.png" alt="" class="project__container_image project__container_image_one">
                         <div class="project__container_text">
-                            <p class="project__container_year">2020</p>
-                            <h3 class="project__container_title">ЖК Метрополия 
-                                корпус ROME</h3>
+                            <div class="project__container_text_title">
+                                <p class="project__container_year">2020</p>
+                                <h3 class="project__container_title">ЖК Метрополия 
+                                    корпус ROME</h3>
+                            </div>
                             <p class="project__container_subtitle_two project__container_subtitle">Квартира с двумя спальнями в холодных тонах 
                                 для семьи с дочкой-подростком</p>
                             <div class="project__container_group2">
@@ -90,9 +94,11 @@
                     </div>
                     <div class="project__container project__container_even project__container__example_three">
                         <div class="project__container_text">
-                            <p class="project__container_year">2020</p>
-                            <h3 class="project__container_title_long project__container_title">ЖК  Шереметьевский</h3>
-                        <p class="project__container_subtitle_three project__container_subtitle">Светлая акцентная квартира для семьи с двумя детьми</p>
+                            <div class="project__container_text_title">
+                                <p class="project__container_year">2020</p>
+                                <h3 class="project__container_title_long project__container_title">ЖК  Шереметьевский</h3>
+                            </div>
+                            <p class="project__container_subtitle_three project__container_subtitle">Светлая акцентная квартира для семьи с двумя детьми</p>
                         <div class="project__container_group2">
                         <a href="#" class="project__container_link">узнать больше <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                         <p class="project__container_metre">95 м2</p>
@@ -103,9 +109,11 @@
                     <div class="project__container project__container_odd project__container__example_four">
                         <img src="./image/fourexample.png" alt="" class="project__container_image project__container_image_three">
                         <div class="project__container_text">
-                            <p class="project__container_year">2020</p>
-                            <h3 class="project__container_title_long project__container_title">ЖК Discovery Park</h3>
-                            <p class="project__container_subtitle_four project__container_subtitle">Апартаменты-студия для девушки</p>
+                            <div class="project__container_text_title">
+                                <p class="project__container_year">2020</p>
+                                <h3 class="project__container_title_long project__container_title">ЖК Discovery Park</h3>
+                            </div>
+                                <p class="project__container_subtitle_four project__container_subtitle">Апартаменты-студия для девушки</p>
                             <div class="project__container_group2">
                             <a href="#" class="project__container_link">узнать больше <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                             <p class="project__container_metre">29 м2</p>
