--- a/index2.html
+++ b/index2.html
@@ -6,33 +6,166 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="normalize.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <title>Document</title>
 </head>
 <body>
-    <section class="header">
-        <div class="header__logo">
-            <img class="header__image" src="./image/logo.svg" alt="лого">
+        <div class="page">
+            <section data-aos="fade-down"  class="header header__portfolio">
+                <h1 class="header__title">\Портфолио</h1>
+                <div class="header__menu">
+                    <a class="header__menu_text header__menu_home" href='./index.html'>Home</a>
+                    <a class="header__menu_text" href='#'>О нас</a>
+                    <a class="header__menu_text" href='#'>Проекты</a>
+                    <a class="header__menu_text" href='#'>Цены</a>
+                    <a class="header__menu_text" href='#'>Связаться</a>
+                </div>
+                <ul class="header__menu_burger">
+                    <li><img class="header__image_burger header__image_burger-portfolio" src="./image/,burger.svg"alt="лого">
+                            <ul class='header__menu_burgers header__menu_burger_block'>
+                                <li><a class="header__menu_text header__menu_home" href='./index.html'>Home</a></li>
+                                <li><a class="header__menu_text" href='#'>О нас</a></li>
+                                <li><a class="header__menu_text" href='#'>Проекты</a></li>
+                                <li><a class="header__menu_text" href='#'>Цены</a></li>
+                                <li><a class="header__menu_text" href='#'>Связаться</a></li>
+                            </ul>
+                    </li>
+                </ul>
+            </section>
+            <section class="project">
+                <div data-aos="fade-left"  class="project__container project__container_even project__container__example_one">
+                    <div class="project__container_text">
+                        <div class="project__container_text_title">
+                            <p class="project__container_year">2020</p>
+                            <h3 class="project__container_title">ЖК Кутузовский Life</h3>
+                        </div>
+                        <p class="project__container_subtitle">Квартира в стиле минимализм для семьи с ребенком</p>
+                        <div class="project__container_group2">
+                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <p class="project__container_metre">100 м2</p>
+                        </div>
+                    </div>
+                    <img src="./image/oneexample.png" alt="первый пример" class="project__container_image">
+                </div>
+                <div data-aos="fade-right"  class="project__container project__container_odd project__container__example_two">
+                    <img src="./image/twoexample.png" alt="" class="project__container_image project__container_image_one">
+                    <div class="project__container_text">
+                        <div class="project__container_text_title">
+                            <p class="project__container_year">2020</p>
+                            <h3 class="project__container_title">ЖК Метрополия 
+                                корпус ROME</h3>
+                        </div>  
+                        <p class="project__container_subtitle_two project__container_subtitle">Квартира с двумя спальнями в холодных тонах 
+                            для семьи с дочкой-подростком</p>
+                        <div class="project__container_group2">
+                        <a href="#" class="project__container_link">открыть проект<img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <p class="project__container_metre">70 м2</p>
+                        </div>
+                    </div>
+                </div>
+                <div data-aos="fade-left" class="project__container project__container_even project__container__example_three">
+                    <div class="project__container_text">
+                        <div class="project__container_text_title">
+                            <p class="project__container_year">2020</p>
+                            <h3 class="project__container_title_long project__container_title">ЖК  Шереметьевский</h3>
+                        </div>
+                            <p class="project__container_subtitle_three project__container_subtitle">Светлая акцентная квартира для семьи с двумя детьми</p>
+                    <div class="project__container_group2">
+                    <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                    <p class="project__container_metre">95 м2</p>
+                    </div>
+                    </div>
+                    <img src="./image/threeexample.png" alt="первый пример" class="project__container_image">
+                </div>
+                <div data-aos="fade-left" class="project__container project__container_odd project__container__example_four">
+                    <img src="./image/fourexample.png" alt="" class="project__container_image project__container_image_three">
+                    <div class="project__container_text">
+                        <div class="project__container_text_title">
+                            <p class="project__container_year">2020</p>
+                            <h3 class="project__container_title_long project__container_title">ЖК Discovery Park</h3>
+                        </div>
+                            <p class="project__container_subtitle_four project__container_subtitle">Апартаменты-студия для девушки</p>
+                        <div class="project__container_group2">
+                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <p class="project__container_metre">29 м2</p>
+                        </div>
+                    </div>
+                </div>
+                <div data-aos="fade-right" class="project__container project__container_even project__container__example_one">
+                    <div class="project__container_text">
+                        <div class="project__container_text_title">
+                            <p class="project__container_year">2020</p>
+                            <h3 class="project__container_title">Октябрьское поле</h3>
+                        </div>
+                            <p class="project__container_subtitle">Квартира для семейной пары</p>
+                        <div class="project__container_group2">
+                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <p class="project__container_metre">55 м2</p>
+                        </div>
+                    </div>
+                    <img src="./image/oktpole.jpg" alt="пятый пример" class="project__container_image">
+                </div>
+                <div data-aos="fade-left" class="project__container project__container_even project__container__example_one">
+                    <div class="project__container_text">
+                        <div class="project__container_text_title">
+                            <p class="project__container_year">2020</p>
+                            <h3 class="project__container_title">ЖК Новочеремушкинская</h3>
+                        </div>
+                            <p class="project__container_subtitle">Современное прочтение классики для двух человек- мамы и дочки.</p>
+                        <div class="project__container_group2">
+                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <p class="project__container_metre">100 м2</p>
+                        </div>
+                    </div>
+                    <img src="./image/novosheremki.jpg" alt="пятый пример" class="project__container_image">
+                </div>
+                <div data-aos="fade-right" class="project__container project__container_even project__container__example_one">
+                    <div class="project__container_text">
+                        <div class="project__container_text_title">
+                            <p class="project__container_year">2020</p>
+                            <h3 class="project__container_title">ЖК Преображение</h3>
+                        </div>
+                            <p class="project__container_subtitle">Оливково-терракотовая квартира для девушки.</p>
+                        <div class="project__container_group2">
+                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <p class="project__container_metre">55 м2</p>
+                        </div>
+                    </div>
+                    <img src="./image/preob.png" alt="пятый пример" class="project__container_image">
+                </div>
+            </section>
+            <section data-aos="fade-up" class="footer">
+                <div class="footer__container">
+                    <div class="footer__menu">
+                        <h6 class="footer__menu_title">Меню</h6>
+                        <p class="footer__menu_text">О нас</p>
+                        <p class="footer__menu_text">Проекты</p>
+                        <p class="footer__menu_text">Цены</p>
+                    </div>
+                    <img src="./image/obrazlable.svg" alt="" class="footer__logo">
+                    <div class="footer_contacts">
+                        <h6 class="footer__menu_title">Контакты</h6>
+                        <p class="footer__menu_text">(+62) 893912392190</p>
+                        <p class="footer__menu_text">obrazstudio@gmail.com</p>
+                    </div>
+                </div>
+                <div class="footer__container_image">
+                    <a href="#"><img src="./image/вотсап.svg" alt="icon whatsapp" class="footer__image_whts"></a>
+                    <a href=""><img src="./image/телега.svg" alt="icon telegram" class="footer__image_tg"></a>
+                 </div>
+                 <div class="footer__underline"></div>
+                 <p class="footer__subtitle">Все права защищены 2022©</p>
+            </section>
+
+            <section class="da">
+                <div class="container"></div>
+            </section>
         </div>
-        <div class="header__menu">
-            <a class="header__menu_text header__menu_home" href='./index.html'>Home</a>
-            <a class="header__menu_text" href='#'>О нас</a>
-            <a class="header__menu_text" href='#'>Проекты</a>
-            <a class="header__menu_text" href='#'>Цены</a>
-            <a class="header__menu_text" href='#'>Связаться</a>
-        </div>
-        <ul class="header__menu_burger">
-            <li><img class="header__image_burger" src="./image/,burger.svg"alt="лого">
-                    <ul class='header__menu_burgers header__menu_burger_block'>
-                        <li><a class="header__menu_text header__menu_home" href='./index.html'>Home</a></li>
-                        <li><a class="header__menu_text" href='#'>О нас</a></li>
-                        <li><a class="header__menu_text" href='#'>Проекты</a></li>
-                        <li><a class="header__menu_text" href='#'>Цены</a></li>
-                        <li><a class="header__menu_text" href='#'>Связаться</a></li>
-                    </ul>
-            </li>
-        </ul>
-    </section>
-    
 </body>
 <script src="./index.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 </html>
