--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <div class="header__menu">
                             <a class="header__menu_text header__menu_home" href='./index.html'>Home</a>
                             <a class="header__menu_text" href='#'>О нас</a>
-                            <a class="header__menu_text" href='./index2.html'>Проекты</a>
+                            <a class="header__menu_text" href='./portfolio.html'>Проекты</a>
                             <a class="header__menu_text" href='#'>Цены</a>
                             <a class="header__menu_text" href='#'>Связаться</a>
                         </div>
@@ -28,7 +28,7 @@
                                 <ul class='header__menu_burgers header__menu_burger_block'>
                                      <li><a class="header__menu_text" href='#'>Home</a></li>
                                       <li><a class="header__menu_text" href='#'>О нас</a></li>
-                                    <li><a class="header__menu_text" href='/index2.html'>Проекты</a></li>
+                                    <li><a class="header__menu_text" href='/portfolio.html'>Проекты</a></li>
                                        <li><a class="header__menu_text" href='#'>Цены</a></li>
                                       <li><a class="header__menu_text" href='#'>Связаться</a></li>
                                 </ul>
