--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                         </div>
                         <p class="project__container_subtitle">Квартира в стиле минимализм для семьи с ребенком</p>
                         <div class="project__container_group2">
-                        <a href="#" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
+                        <a href="./kutuzovsky.html" class="project__container_link">открыть проект <img src="./image/Vectorarrow.svg" alt="" class="project__container_link_image"></a>
                         <p class="project__container_metre">100 м2</p>
                         </div>
                     </div>
