--- a/novosherem.html
+++ b/novosherem.html
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                 </div>
-                <img src="./image/discovery1.png" alt="первый пример" class="project__container_image">
+                <img src="./image/novosherem1.png" alt="первый пример" class="project__container_image">
             </div>
         </section>
         <section class="location">
@@ -60,16 +60,17 @@
                     Семья очень любит путешествовать. </p>
         </section>
         <section class="project-kutuz">
-            <img src="./image/discovery2.png" alt="ванная комната кутузовский жк" class="project-kutuz__image">
-            <img src="./image/discovery3.png" alt="гостинная кутузовский" class="project-kutuz__image">
-            <img src="./image/discovery4.png" alt="" class="project-kutuz__image">
-            <img src="./image/discovery5.png" alt=" коридор кутузовский" class="project-kutuz__image">
+            <img src="./image/novosherem2.png" alt="ванная комната кутузовский жк" class="project-kutuz__image">
+            <img src="./image/novosherem3.png" alt="гостинная кутузовский" class="project-kutuz__image">
+            <img src="./image/novosherem4.png" alt="" class="project-kutuz__image">
+            <img src="./image/novosherem5.png" alt=" коридор кутузовский" class="project-kutuz__image">
             <p class="location__subtitle">Детская очень живая и наполненная духом творчества. Зная увлечения хозяйки комнаты, мы вписали в пространство детской большое зеркало и балетный станок.</p>
-            <img src="./image/discovery6.png" alt="спальня кутузовский" class="project-kutuz__image">
-            <img src="./image/discovery7.svg" alt="детская комната кутузовский" class="project-kutuz__image">
+            <img src="./image/novosherem6.png" alt="спальня кутузовский" class="project-kutuz__image">
+            <img src="./image/novosherem7.png" alt="детская комната кутузовский" class="project-kutuz__image">
+            <img src="./image/novosher8.svg" alt="детская комната кутузовский" class="project-kutuz__image">
             <div class="project__container_navigation">
-                <a href="#" class="project-kutuz__link">следующий проект</a>
-                <a href="#" class="project-kutuz__link_image"><img src="./image/Vector.svg" alt="" class="project-kutuz__image_link"></a>
+                <a href="./preobrajenskya.html" class="project-kutuz__link">следующий проект</a>
+                <a href="./preobrajenskya.html" class="project-kutuz__link_image"><img src="./image/Vector.svg" alt="" class="project-kutuz__image_link"></a>
             </div>
         </section>
         <section class="projects">
@@ -78,8 +79,8 @@
                 <a href="./kutuzovsky.html" class="projects__link"><h3 class="projects__text_link">ЖК Кутузовский Life</h3></a>
                 <a href="./metropoliya.html" class="projects__link"><h3 class="projects__text_link">ЖК Метрополия корпус ROME</h3></a>
                 <a href="./octoberpole.html" class="projects__link"><h3 class="projects__text_link">Октябрьское поле</h3></a>
-                <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Новочеремушкинская</h3></a>
-                <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Преображение</h3></a>
+                <a href="./discoverpark.html" class="projects__link"><h3 class="projects__text_link">ЖК Discovery Park</h3></a>
+                <a href="./preobrajenskya.html" class="projects__link"><h3 class="projects__text_link">ЖК Преображение</h3></a>
                 <a href="./portfolio.html"><img src="./image/leftarrow.svg" alt="" class="projects__btn_link"></a>
             </div>
         </section>
