--- a/preobrajenskya.html
+++ b/preobrajenskya.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="normalize.css">
-    <title>DiscoveryPark</title>
+    <title>Preobrajenie</title>
 </head>
 <body>
     <div class="page">
@@ -36,50 +36,54 @@
                 <div class="project__container_text">
                     <div class="project__container_text_title">
                         <p class="project__container_year">2020</p>
-                        <h3 class="project__container_title">ЖК Discovery Park</h3>
+                        <h3 class="project__container_title">ЖК Преображение</h3>
                     </div>
-                    <p class="project__container_subtitle project__container_subtitle_portfolio">Аскетичная и функциональная апартаменты-студия для девушки</p>
+                    <p class="project__container_subtitle project__container_subtitle_portfolio">Оливково-терракотовая квартира для девушки.</p>
                     <div class="project__container_group2 project__container_group2_top">
                         <div class="project__container_math">
                             <p class="project__container_square">площадь</p>
-                            <p class="project__container_metre project__container_metre_portolio">29 м2</p>
+                            <p class="project__container_metre project__container_metre_portolio">55 м2</p>
                         </div>
                         <div class="project__container_rooms">
                             <p class="project__container_rooms">комнаты</p>
-                            <p class="project__container_cuantity-rooms">1</p>
+                            <p class="project__container_cuantity-rooms">2</p>
                         </div>
                     </div>
                 </div>
-                <img src="./image/discovery1.png" alt="первый пример" class="project__container_image">
+                <img src="./image/preob1.png" alt="первый пример" class="project__container_image">
             </div>
         </section>
         <section class="location">
             <p class="location__title_small">локация</p>
             <h2 class="location__title">Москва</h2>
-                <p class="location__subtitle">Проект студии для девушки, которая занимается компьютерной графикой для кино и много времени проводит на работе, Заказчица указала, что не любит принимать гостей дома, поэтому нет необходимости в большой столовой группе, а также редко готовит дома.
-                    Также заказчица указала, что любит читать и поэтому было место для чтения у окна.</p>
+                <p class="location__subtitle">Пожелания заказчика:</p>
+                <ul class="location__list" >
+                	<li>Легкий, не перегруженный деталями интерьер с несколькими цветовыми акцентами.</li>
+                	<li>Отдельная кухня, но возможность "объединить" ее с гостиной и рабочей зоной. Это удалось сделать с помощью раздвижных дверей-перегородок. В открытом состоянии они создают большой открытый проход.</li> 
+                </ul>
         </section>
         <section class="project-kutuz">
-            <img src="./image/discovery2.png" alt="ванная комната кутузовский жк" class="project-kutuz__image">
-            <p class="location__subtitle">Высокий вертикальный черный радиатор не только выполняет свою прямую отопительную функцию, но и является акцентом, который добавляет интерьеру графичности и в тандеме с окнами в пол визуально увеличивает высоту потолка за счет вертикальных направляющих. </p>
-            <img src="./image/discovery3.png" alt="гостинная кутузовский" class="project-kutuz__image">
-            <img src="./image/discovery4.png" alt="" class="project-kutuz__image">
-            <img src="./image/discovery5.png" alt=" коридор кутузовский" class="project-kutuz__image">
-            <img src="./image/discovery6.png" alt="спальня кутузовский" class="project-kutuz__image">
-            <img src="./image/discovery7.svg" alt="детская комната кутузовский" class="project-kutuz__image">
+            <img src="./image/preob2.png" alt="ванная комната кутузовский жк" class="project-kutuz__image">
+            <img src="./image/preob3.png" alt="гостинная кутузовский" class="project-kutuz__image">
+            <p class="location__subtitle">Также девушке очень нравятся принт тераццо и различные круглые и сферические элементы. Мы, конечно же, вписали их в дизайн квартиры.</p>
+            <img src="./image/preob4.png" alt=" коридор кутузовский" class="project-kutuz__image">
+            <img src="./image/preob5.png" alt="спальня кутузовский" class="project-kutuz__image">
+            <img src="./image/preob6.png" alt="детская комната кутузовский" class="project-kutuz__image">
+            <p class="location__subtitle">Рядом с диваном было создано рабочее место, которое отлично выполняет свои функции, при этом не давит. Оно было дополнительно задекорировано с помощью реек, которые идут до потолка.</p>
+            <img src="./image/preob7.svg" alt="детская комната кутузовский" class="project-kutuz__image">
             <div class="project__container_navigation">
-                <a href="./octoberpole.html" class="project-kutuz__link">следующий проект</a>
-                <a href="./octoberpole.html" class="project-kutuz__link_image"><img src="./image/Vector.svg" alt="" class="project-kutuz__image_link"></a>
+                <a href="./novosherem.html" class="project-kutuz__link">следующий проект</a>
+                <a href="./novosherem.html" class="project-kutuz__link_image"><img src="./image/Vector.svg" alt="" class="project-kutuz__image_link"></a>
             </div>
         </section>
         <section class="projects">
             <div class="projects__container"></div>
-                <a href="./sheremetevskiy.html" class="projects__link"><h3 class="projects__text_link">ЖК Шереметьевский</h3></a>
+                <a href="./discoverpark.html" class="projects__link"><h3 class="projects__text_link">ЖК Discovery park</h3></a>
                 <a href="./kutuzovsky.html" class="projects__link"><h3 class="projects__text_link">ЖК Кутузовский Life</h3></a>
                 <a href="./metropoliya.html" class="projects__link"><h3 class="projects__text_link">ЖК Метрополия корпус ROME</h3></a>
-                <a href="./octoberpole.html" class="projects__link"><h3 class="projects__text_link">Октябрьское поле</h3></a>
+                <a href="./sheremetevskiy.html" class="projects__link"><h3 class="projects__text_link">ЖК Шереметьевский</h3></a>
                 <a href="./novosherem.html" class="projects__link"><h3 class="projects__text_link">ЖК Новочеремушкинская</h3></a>
-                <a href="./preobrajenskya.html" class="projects__link"><h3 class="projects__text_link">ЖК Преображение</h3></a>
+                <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Октябрьское Поле</h3></a>
                 <a href="./portfolio.html"><img src="./image/leftarrow.svg" alt="" class="projects__btn_link"></a>
             </div>
         </section>
