--- a/kutuzovsky.html
+++ b/kutuzovsky.html
@@ -75,12 +75,12 @@
         </section>
         <section class="projects">
             <div class="projects__container"></div>
-                <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Discovery park</h3></a>
+                <a href="./discoverpark.html" class="projects__link"><h3 class="projects__text_link">ЖК Discovery park</h3></a>
                 <a href="./metropoliya.html" class="projects__link"><h3 class="projects__text_link">ЖК Метрополия корпус ROME</h3></a>
-                <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Шереметьевский</h3></a>
-                <a href="" class="projects__link"><h3 class="projects__text_link">Октябрьское поле</h3></a>
-                <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Новочеремушкинская</h3></a>
-                <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Преображение</h3></a>
+                <a href="./sheremetevskiy.html" class="projects__link"><h3 class="projects__text_link">ЖК Шереметьевский</h3></a>
+                <a href="./octoberpole.html" class="projects__link"><h3 class="projects__text_link">Октябрьское поле</h3></a>
+                <a href="./novosherem.html" class="projects__link"><h3 class="projects__text_link">ЖК Новочеремушкинская</h3></a>
+                <a href="./preobrajenskya.html" class="projects__link"><h3 class="projects__text_link">ЖК Преображение</h3></a>
                 <a href="./portfolio.html"><img src="./image/leftarrow.svg" alt="" class="projects__btn_link"></a>
             </div>
         </section>
