--- a/metropoliya.html
+++ b/metropoliya.html
@@ -82,9 +82,9 @@
                 <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Discovery park</h3></a>
                 <a href="./kutuzovsky.html" class="projects__link"><h3 class="projects__text_link">ЖК Кутузовский Life</h3></a>
                 <a href="./sheremetevskiy.html" class="projects__link"><h3 class="projects__text_link">ЖК Шереметьевский</h3></a>
-                <a href="" class="projects__link"><h3 class="projects__text_link">Октябрьское поле</h3></a>
-                <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Новочеремушкинская</h3></a>
-                <a href="" class="projects__link"><h3 class="projects__text_link">ЖК Преображение</h3></a>
+                <a href="./octoberpole.html" class="projects__link"><h3 class="projects__text_link">Октябрьское поле</h3></a>
+                <a href="./novosherem.html" class="projects__link"><h3 class="projects__text_link">ЖК Новочеремушкинская</h3></a>
+                <a href="./preobrajenskya.html" class="projects__link"><h3 class="projects__text_link">ЖК Преображение</h3></a>
                 <a href="./portfolio.html"><img src="./image/leftarrow.svg" alt="" class="projects__btn_link"></a>
             </div>
         </section>
