--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <p class="dream__subtitle">Помогаем найти баланс между красотой и комфортом. 
                             Контроль качества на каждом этапе.</p>
                         <div class="dream__response">
-                            <form id='form' class="dream__form">
+                            <form action="sendmail.php" method="POST" id='form' class="dream__form">
                                 <fieldset class="dream__form_set">
                                     <input type="tel" placeholder="номер телефона"  name="number" id="formEmail" class="dream__input _req">
                                     <button type="submit" class="dream__btn">рассчитать стоимость проекта</button>
